--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -68,6 +68,9 @@
     <Compile Include="Assets\Scripts\KinematicPlayerController\KinematicMotor.cs" />
     <Compile Include="Assets\Scripts\SlimeRTS\FPSCameraController.cs" />
     <Compile Include="Assets\Scripts\SlimeMotor\MovingPlatform.cs" />
+    <Compile Include="Assets\Scripts\SlimeMotor\SlimeLauncher.cs" />
+    <Compile Include="Assets\Scripts\SlimeMotor\SlimeGate.cs" />
+    <Compile Include="Assets\Scripts\SlimeRTS\MultiSelection.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
