too many change for little push

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -75,12 +75,12 @@
     <Compile Include="Assets\Scripts\SlimeRTS\FPSCameraController.cs" />
     <Compile Include="Assets\Scripts\SlimeMotor\MovingPlatform.cs" />
     <Compile Include="Assets\Scripts\SlimeRTS\UIManager.cs" />
+    <Compile Include="Assets\Scripts\SlimeRTS\RagdollUtils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Mobile Overlay.shader" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_Bitmap.shader" />
-    <None Include="Assets\Scripts\SlimeRTS\Outline.shader" />
     <None Include="Assets\TextMesh Pro\Shaders\TMPro_Mobile.cginc" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF SSD.shader" />
     <None Include="Assets\TextMesh Pro\Shaders\TMP_SDF-Surface-Mobile.shader" />
