--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Assets\Scripts\SlimeRTS\FPSCameraController.cs" />
     <Compile Include="Assets\Scripts\SlimeMotor\MovingPlatform.cs" />
     <Compile Include="Assets\Scripts\SlimeRTS\UIManager.cs" />
+    <Compile Include="Assets\Scripts\SlimeRTS\LockScript.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
